# sekai-exam

./: .env.example  .gitignore  Dockerfile  README.md  changelog.md  pyproject.toml  requirements.txt  run.sh
.cursor/rules/: python_clean_code.mdc  python_tdd_llm_agents.mdc  update_changelog.mdc  use_context7_for_docs.mdc
Docs/: changelog.md  engineering_design_doc.md  goal.md  implementation_plan.md
src/seikai_optimizer/scripts/: build_index.py  synthesize_data.py
src/sekai_optimizer/: main.py
src/sekai_optimizer/agents/evaluation/: evaluation.py
src/sekai_optimizer/data/: state.py  types.py
src/sekai_optimizer/nodes/: __init__.py  evaluate.py  generate_groundtruths.py  optimize_prompt.py  pick_users.py  recommend_stories.py  simulate_tags.py
src/sekai_optimizer/scripts/: build_index.py  synthesize_data.py
src/sekai_optimizer/workflows/: graph_builder.py  state_initialization.py
tests/: test_e2e.py
tests/nodes/: test_evaluate.py  test_generate_groundtruths.py  test_optimize_prompt.py  test_pick_users.py  test_recommend_stories.py  test_recommend_stories_integration.py  test_simulate_tags.py
tests/scripts/: test_data_synthesis.py  test_vector_store.py
